--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -14,8 +14,8 @@
       <mat-divider *ngIf="i !== 0 && menu.length !== 0"></mat-divider>
       <a class="nav-list-item" mat-list-item *ngFor="let item of menu" [routerLink]="[ '/' + item?.url ]"
         routerLinkActive="active {{item?.theme}}">
-        <mat-icon class="blue" [ngClass]="{'pH': linkText}">{{ item?.icon }}</mat-icon>
-        <span [@animateText]="linkText ? 'show' : 'hide'">{{ item?.name }} </span>
+        <mat-icon [ngClass]="{'pH': linkText}" class="mat-hint">{{ item?.icon }}</mat-icon>
+        <span class="mat-hint" [@animateText]="linkText ? 'show' : 'hide'">{{ item?.name }} </span>
       </a>
     </mat-nav-list>
   </div>
