--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,30 +1,21 @@
 .login {
   height: 100vh;
-  background-color: var(--bg-main-color);
+  padding: var(--main-padding-size)
 }
 
-.left-login {
-  background-color: var(--primary-color);
-
-  h1 {
-    position: absolute;
-    padding: var(--padding-main-size);
-    margin: 0;
-    color: white !important;
-  }
-
-  .bg-image-login {
-    width: 100%;
-    height: 100%;
-    background-image: url('/assets/img/johanna-vogt-chelo.jpg');
-    background-size: cover;
-    background-position: center;
-    opacity: .35;
-  }
+.login-container {
+  width: 100%;
+  max-width: 600px;
 }
 
-.right-login {
-  .header {
-    background-color: var(--bg-main-color);
+mat-form-field {
+  width: 100%;
+}
+
+.button-controls {
+  button {
+    transition: all .2s;
+    border-radius: 24px !important;
+    padding: .3rem 2.4rem !important;
   }
 }
