Load theme on aula component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,8 +14,7 @@
   <div class="spacer"></div>
 
   <!-- Toogle theme -->
-  <button class="menu-button mrQ" mat-icon-button (click)="toggleTheme()" aria-label="Cambiar tema"
-  matTooltip="Cambiar tema" matTooltipPosition="left">
+  <button class="menu-button mrQ" mat-icon-button (click)="toggleTheme()" aria-label="Cambiar tema">
     <mat-icon>{{themeIcon}}</mat-icon>
   </button>
 </mat-toolbar>
