--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,21 +1,44 @@
 .login {
   height: 100vh;
-  padding: var(--main-padding-size)
+  padding: var(--main-padding-size);
+  background-image: url('/assets/images/cello.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.login-background {
+  background-color: var(--light-theme-primary);
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  opacity: 0.4;
+}
+
+.image-logo {
+  position: relative;
+  top: -30px;
+  height: 40px;
+
+  &-icon {
+    padding: 6px;
+    width: 92px;
+    height: 92px;
+    border-radius: 50%;
+    background-color: #fff;
+  }
 }
 
 .login-container {
   width: 100%;
-  max-width: 600px;
+  z-index: 10;
+  max-width: 350px;
+  padding: var(--main-padding-size);
+  padding-top: .5rem;
+  background-color: white;
+  border-radius: 2px;
+  transition: padding .2s;
 }
 
 mat-form-field {
   width: 100%;
-}
-
-.button-controls {
-  button {
-    transition: all .2s;
-    border-radius: 24px !important;
-    padding: .3rem 2.4rem !important;
-  }
 }
