--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
 
     <!-- Logo -->
     <div class="image-logo" fxLayout="row" fxLayoutAlign="center center">
-      <img class="image-logo-icon" src="/assets/images/logo-blue.svg" alt="Logo Aula 13">
+      <img class="image-logo-icon" src="/assets/svgs/logo-blue.svg" alt="Logo Aula 13">
     </div>
 
     <!-- Title -->
