Move night mode toggle to configuration page

--- a/src/app/components/configuration/configuration.component.html
+++ b/src/app/components/configuration/configuration.component.html
@@ -1,3 +1,9 @@
-<p>
-  configuration works!
-</p>
+<!-- Title -->
+<h2 class="mat-h1 pt1 pb1">{{title}}</h2>
+
+<!-- Theme -->
+<h3 class="mat-h2 mat-hint">Tema</h3>
+
+<mat-slide-toggle labelPosition="before" (change)="toggleTheme()">
+  Modo nocturno
+</mat-slide-toggle>
