--- a/src/app/components/configuration/configuration.component.html
+++ b/src/app/components/configuration/configuration.component.html
@@ -1,9 +1,9 @@
 <!-- Title -->
-<h2 class="mat-h1 pt1 pb1">{{title}}</h2>
+<h2 class="mat-h1 pt1 pb1">{{title | translate}}</h2>
 
 <!-- Theme -->
-<h3 class="mat-h2 mat-hint">Tema</h3>
+<h3 class="mat-h2 mat-hint">{{'THEME' | translate}}</h3>
 
 <mat-slide-toggle labelPosition="before" (change)="toggleTheme()">
-  Modo nocturno
+  {{"THEMING.DARK_MODE" | translate}}
 </mat-slide-toggle>
