--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -15,7 +15,7 @@
       <a class="nav-list-item" mat-list-item *ngFor="let item of menu" [routerLink]="[ '/' + item?.url ]"
         routerLinkActive="active {{item?.theme}}">
         <mat-icon [ngClass]="{'pH': linkText}" class="mat-hint">{{ item?.icon }}</mat-icon>
-        <span class="mat-hint" [@animateText]="linkText ? 'show' : 'hide'">{{ item?.name }} </span>
+        <span class="mat-hint" [@animateText]="linkText ? 'show' : 'hide'">{{ item?.name | translate}} </span>
       </a>
     </mat-nav-list>
   </div>
