--- a/src/app/components/student-list/student-list.component.html
+++ b/src/app/components/student-list/student-list.component.html
@@ -1,10 +1,11 @@
 <!-- Title -->
-<h2 class="mat-h1 pt1">{{title}}</h2>
+<h2 class="mat-h1 pt1">{{title | translate}}</h2>
 
 <!-- Filter -->
 <mat-form-field>
-  <input matInput [(ngModel)]="studentFilter" (ngModelChange)="searchStudent($event)" placeholder="Buscar alumno"
-    aria-label="Buscar alumno" autocomplete="off">
+  <input matInput [(ngModel)]="studentFilter" (ngModelChange)="searchStudent($event)"
+    placeholder="{{'SEARCH_STUDENT' | translate}}" attr.aria-label="{{'SEARCH_STUDENT' | translate}}"
+    autocomplete="off">
   <mat-icon matSuffix>search</mat-icon>
 </mat-form-field>
 
@@ -14,8 +15,9 @@
   [matSortDirection]="defaultSortDir" matSortStart="desc">
   <ng-container *ngFor="let col of columns">
     <div class="row {{col.class}}" [mat-sort-header]="col.id">
-      <button mat-button aria-label="Ordenar columna" [color]="isActive(col.id)">
-        <span>{{col.name}}</span>
+      <button mat-button attr.aria-label="{{'SORT_COLUMN' | translate}} {{col.name | translate}}"
+        [color]="isActive(col.id)">
+        <span>{{col.name | translate}}</span>
       </button>
     </div>
   </ng-container>
@@ -27,4 +29,4 @@
 </ng-container>
 
 <!-- Empty list -->
-<h3 *ngIf="!studentListFiltered.length" class="mat-h1 mt3 txt-center mat-hint">¯\_(ツ)_/¯</h3>
+<h3 *ngIf="!studentListFiltered.length" class="mat-h1 mt3 txt-center mat-hint">{{'MSG.NOTHING_MAN' | translate}}</h3>
