Removed 'SIGN_OUT' literal on header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,8 +14,7 @@
   <div class="spacer"></div>
 
   <!-- Sign Out -->
-  <button class="menu-button mrQ" mat-button (click)="signOut()" attr.aria-label="{{'SIGN.OUT' | translate}}">
-    <span class="mat-body mrH">{{"SIGN.OUT" | translate}}</span>
+  <button class="menu-button mrQ" mat-icon-button (click)="signOut()" attr.aria-label="{{'SIGN.OUT' | translate}}">
     <mat-icon>exit_to_app</mat-icon>
   </button>
 </mat-toolbar>
