--- a/src/app/components/configuration/configuration.component.html
+++ b/src/app/components/configuration/configuration.component.html
@@ -1,9 +1,30 @@
 <!-- Title -->
 <h2 class="mat-h1 pt1 pb1">{{title | translate}}</h2>
 
-<!-- Theme -->
-<h3 class="mat-h2 mat-hint">{{'THEME' | translate}}</h3>
+<!-- Lenguaje -->
+<h3 class="mat-h2 mat-hint">{{"GENERAL" | translate}}</h3>
 
-<mat-slide-toggle labelPosition="before" (change)="toggleTheme()">
-  {{"THEMING.DARK_MODE" | translate}}
-</mat-slide-toggle>
+<div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="1rem">
+  <mat-icon color="primary">language</mat-icon>
+  <mat-form-field>
+    <mat-label>{{"LANGUAGE" | translate}}</mat-label>
+    <mat-select [formControl]="langControl" (selectionChange)="setLang()">
+      <mat-option *ngFor="let lang of languages" [value]="lang">
+        {{lang.name | translate}}
+      </mat-option>
+    </mat-select>
+    <mat-hint>{{langControl.value?.tip}}</mat-hint>
+  </mat-form-field>
+</div>
+
+<mat-divider class="mt2 mb2"></mat-divider>
+
+<!-- Theme -->
+<h3 class="mat-h2 mat-hint">{{"THEME" | translate}}</h3>
+
+<div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="1rem">
+  <mat-icon color="primary">{{themeControl.icon}}</mat-icon>
+  <mat-slide-toggle labelPosition="before" (change)="toggleTheme()" [(ngModel)]="themeIsDark">
+    {{"THEMING.DARK_MODE" | translate}}
+  </mat-slide-toggle>
+</div>
