Added Students avatars

--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -3,7 +3,7 @@
 
     <div class="row mrH mlH" fxLayout="row" fxLayoutAlign="start center">
       <!-- Avatar -->
-      <img class="user-avatar-image mr1" [src]="student.avatar || 'assets/svgs/user-default.svg'" alt="Avatar">
+      <img class="user-avatar-image mr1" [src]="student.avatar || 'assets/svgs/avatars/' + student.gender + '-7.svg'" alt="Avatar">
 
       <!-- Name & Surname -->
       <div fxLayout="column" fxLayoutAlign="space-around start">
