--- a/src/app/components/aula/aula.component.html
+++ b/src/app/components/aula/aula.component.html
@@ -6,7 +6,7 @@
 
   <!-- Side-menu -->
   <mat-sidenav #sideMenu class="sidenav border0" [mode]="mobileQuery.matches ? 'over' : 'side'"
-    [opened]="!mobileQuery.matches" [fixedInViewport]="true" [fixedTopGap]="fixedTopGap"
+    [opened]="!mobileQuery.matches" [fixedInViewport]="true" fixedTopGap="64"
     [@onSideNavChange]="{value: onSideNavChange ? 'open' : 'close', params: {widthClose: animStyles.close.width, widthOpen: animStyles.open.width}}">
     <a13-side-menu></a13-side-menu>
   </mat-sidenav>
