--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header" [color]="themeName">
 
-  <button class="menu-button mlQ mr1" mat-icon-button (click)="toggleSinenav()" attr.aria-label="{{(sidenavState ? 'CLOSE_MENU' : 'OPEN_MENU') | translate}}">
+  <button class="menu-button ml-q mr-1" mat-icon-button (click)="toggleSinenav()" attr.aria-label="{{(sidenavState ? 'CLOSE_MENU' : 'OPEN_MENU') | translate}}">
   <!-- Menu button -->
     <mat-icon>menu</mat-icon>
   </button>
@@ -14,7 +14,7 @@
   <div class="spacer"></div>
 
   <!-- Sign Out -->
-  <button class="menu-button mrQ" mat-icon-button (click)="signOut()" attr.aria-label="{{'SIGN.OUT' | translate}}">
+  <button class="menu-button mr-q" mat-icon-button (click)="signOut()" attr.aria-label="{{'SIGN.OUT' | translate}}">
     <mat-icon>exit_to_app</mat-icon>
   </button>
 </mat-toolbar>
