--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,14 +12,14 @@
     </div>
 
     <!-- Title -->
-    <h1 class="m0 mbH txt-thin">{{title}}</h1>
-    <span class="mat-body mat-hint mb1 block">{{"APP_SUBTITLE" | translate}}</span>
+    <h1 class="m-0 mb-h txt-thin">{{title}}</h1>
+    <span class="mat-body mat-hint mb-1 block">{{"APP_SUBTITLE" | translate}}</span>
 
     <!-- Form -->
-    <form [formGroup]="formGroup" class="login-form ptH">
+    <form [formGroup]="formGroup" class="login-form pt-h">
 
       <!-- Email -->
-      <mat-form-field class="mb1">
+      <mat-form-field class="mb-1">
         <input matInput type="text" required placeholder="{{'EMAIL' | translate}}" formControlName="email">
         <button mat-button *ngIf="formGroup.controls['email'].value" matSuffix mat-icon-button
           attr.aria-label="{{'RESET_EMAIL' | translate}}" (click)="formGroup.controls['email'].reset()">
@@ -31,7 +31,7 @@
       </mat-form-field>
 
       <!-- Password -->
-      <mat-form-field class="mb3">
+      <mat-form-field class="mb-3">
         <input matInput type="{{passwordType}}" required placeholder="{{'PASSWORD' | translate}}" formControlName="password">
         <button mat-button *ngIf="formGroup.controls['password'].value" matSuffix mat-icon-button
           attr.aria-label="{{(passwordType === 'password' ? 'SHOW_PASSWORD' : 'HIDE_PASSWORD') | translate}}"
@@ -45,7 +45,7 @@
       </mat-form-field>
 
       <!-- Login button -->
-      <div class="mb1" fxLayout="row" fxLayoutAlign="end center">
+      <div class="mb-1" fxLayout="row" fxLayoutAlign="end center">
         <button fxFlex="100" mat-flat-button color="accent" (click)="loginWithEmail()"
           attr.arial-label="{{'SIGN.IN_WITH_EMAIL' | translate}}">{{'SIGN.IN' | translate}}</button>
       </div>
