--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -6,15 +6,15 @@
       <a class="user-avatar" [@animateAvatar]="linkText ? 'huge' : 'small'">
         <img class="user-avatar-image" [src]="user?.avatar || 'assets/svgs/user-default.svg'" alt="Avatar">
       </a>
-      <span class="user-name mt1" [@animateText]="linkText ? 'show' : 'hide'">{{ user?.name }} </span>
+      <span class="user-name mt-1" [@animateText]="linkText ? 'show' : 'hide'">{{ user?.name }} </span>
     </div>
 
     <!-- Menu -->
-    <mat-nav-list class="m0 p0" *ngFor="let menu of menuItems; index as i">
+    <mat-nav-list class="m-0 p-0" *ngFor="let menu of menuItems; index as i">
       <mat-divider *ngIf="i !== 0 && menu.length !== 0"></mat-divider>
       <a class="nav-list-item" mat-list-item *ngFor="let item of menu" [routerLink]="[ '/' + item?.url ]"
         routerLinkActive="active {{item?.theme}}">
-        <mat-icon [ngClass]="{'pH': linkText}" class="mat-hint">{{ item?.icon }}</mat-icon>
+        <mat-icon [ngClass]="{'p-h': linkText}" class="mat-hint">{{ item?.icon }}</mat-icon>
         <span class="mat-hint" [@animateText]="linkText ? 'show' : 'hide'">{{ item?.name | translate}} </span>
       </a>
     </mat-nav-list>
