--- a/src/app/components/configuration/configuration.component.scss
+++ b/src/app/components/configuration/configuration.component.scss
@@ -1,3 +1,13 @@
 mat-form-field {
   width: 100%;
 }
+
+.flag {
+  width: 20px;
+  height: 20px;
+}
+
+.flag-selected {
+  width: 24px;
+  height: 24px;
+}
