--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -31,15 +31,16 @@
 .login-container {
   width: 100%;
   z-index: 10;
-  max-width: 350px;
+  max-width: 400px;
   padding: var(--main-padding-size);
   padding-top: .5rem;
   background-color: white;
   border-radius: 2px;
-  transition: padding .2s;
+  transition: all .2s;
   opacity: .965;
 }
 
 mat-form-field {
   width: 100%;
+  min-width: 100px
 }
